添加放送界面
